Fixed nav overflow issue and changed hover color.

--- a/styles/main.css
+++ b/styles/main.css
@@ -147,7 +147,7 @@ h1 {
     list-style-type: none;
     width: 100%;
     padding: 0;
-    margin: 0 2em;
+    margin: 0 auto;
 }
 
 .nav-item {
@@ -158,6 +158,7 @@ h1 {
 
 .nav-item:hover {
     background-color: var(--red);
+    color: white;
 }
 
 img.logo {
